@@ -61,6 +61,7 @@
 ;;; ************************************************************************
 
 (require 'subr-x) ;; For string-trim
+(eval-when-compile (require 'hbut)) ;; For defib.
 
 ;;; ************************************************************************
 ;;; Public functions
